Updated left alignment of data sets. Resolves #640.

--- a/src/components/article/article.module.css
+++ b/src/components/article/article.module.css
@@ -58,8 +58,12 @@
     /* Content positioner - left alignment */
     .contentPositioner.left {
         margin: 0 auto 0 0;
-        padding: 0 40px;
         max-width: unset;
+    }
+    
+    /* Cap width of content on left aligned pages */
+    .contentPositioner.left p {
+        max-width: 816px;
     }
 
     .contentPositioner.left .contentContainer {
